fix: pad grid on smaller screens

--- a/web/src/main/webapp/css/home.less
+++ b/web/src/main/webapp/css/home.less
@@ -161,7 +161,7 @@ div.table-cell {
   list-style-type: none;
   padding: 0 12px;
   margin: auto;
-  max-width: 1230px;
+  max-width: 1260px;
 
   /* Grid Fallback */
   display: flex;
